--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 ChatterBot==0.6.0
 chatterbot-corpus==0.0.1
+click==6.6
+Flask==0.11.1
 future==0.16.0
+gunicorn==19.6.0
+itsdangerous==0.24
+Jinja2==2.8
 jsondatabase==0.1.7
+MarkupSafe==0.23
 nltk==3.2.2
 oauthlib==2.0.2
 pymongo==3.4.0
 python-dateutil==2.6.0
 python-twitter==3.2.1
-requests==2.13.0
+requests==2.10.0
 requests-oauthlib==0.8.0
 six==1.10.0
+Werkzeug==0.11.10
