--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+amqp==2.1.4
+billiard==3.5.0.2
+celery==4.0.2
 ChatterBot==0.6.0
 chatterbot-corpus==0.0.1
 click==6.6
@@ -7,13 +10,17 @@ gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 jsondatabase==0.1.7
+kombu==4.0.2
 MarkupSafe==0.23
 nltk==3.2.2
 oauthlib==2.0.2
 pymongo==3.4.0
 python-dateutil==2.6.0
 python-twitter==3.2.1
+pytz==2017.2
+redis==2.10.5
 requests==2.10.0
 requests-oauthlib==0.8.0
 six==1.10.0
+vine==1.1.3
 Werkzeug==0.11.10
